--- a/products/package.json
+++ b/products/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=dev node src/index.js",
+    "dev": "NODE_ENV=dev nodemon src/index.js",
     "start": "NODE_ENV=prod node src/index.js"
   },
   "author": "Shoaib S. Shaikh",
