--- a/products/package.json
+++ b/products/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=dev nodemon src/index.js",
+    "dev": "NODE_ENV=dev node src/index.js",
     "start": "NODE_ENV=prod node src/index.js"
   },
   "author": "Shoaib S. Shaikh",
@@ -16,6 +16,8 @@
   "dependencies": {
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "uuid": "^8.3.2",
+    "winston": "^3.8.1"
   }
 }
