--- a/carts/package.json
+++ b/carts/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "products",
+  "name": "carts",
   "version": "1.0.0",
   "type": "module",
   "description": "",
@@ -10,9 +10,6 @@
   },
   "author": "Shoaib S. Shaikh",
   "license": "ISC",
-  "devDependencies": {
-    "dotenv": "^16.0.1"
-  },
   "dependencies": {
     "express": "^4.18.1",
     "kafkajs": "^2.1.0",
@@ -20,5 +17,8 @@
     "sequelize": "^6.21.3",
     "uuid": "^8.3.2",
     "winston": "^3.8.1"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.1"
   }
 }
