--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,15 +2,19 @@ server {
 
     listen 80;
     location /api/v1 {
-        proxy_set_header Host $host;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'Upgrade';
-        proxy_cache_bypass $http_upgrade;
+
+        access_log /var/log/nginx/test.log main;
 
         location /api/v1/products {
             proxy_pass http://products:3001/products;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'Upgrade';
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
         }
+
     }
 
     #error responses
