--- a/nginx/api_gateway.conf
+++ b/nginx/api_gateway.conf
@@ -5,15 +5,17 @@ server {
     access_log /var/log/nginx/api_access.log main; # Each API may also log to a 
                                                    # separate file
 
+    listen 80;
+
     listen 443 ssl;
     server_name api.hadiya.ml;
 
     # TLS config
-    ssl_certificate      /etc/ssl/certs/api.example.com.crt;
-    ssl_certificate_key  /etc/ssl/private/api.example.com.key;
+    ssl_certificate      /etc/ssl/certs/star.hikmat.ml.pem;
+    ssl_certificate_key  /etc/ssl/private/star.hikmat.ml.key.pem;
     ssl_session_cache    shared:SSL:10m;
     ssl_session_timeout  5m;
-    ssl_ciphers          HIGH:!aNULL:!MD5;
+    ssl_ciphers          ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
     ssl_protocols        TLSv1.2 TLSv1.3;
 
     # API definitions, one per file
