--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -5,14 +5,23 @@ server {
 
         access_log /var/log/nginx/test.log main;
 
-        location /api/v1/products {
-            proxy_pass http://products:3001/products;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'Upgrade';
-            proxy_cache_bypass $http_upgrade;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'Upgrade';
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+
+        location = /api/v1/products {
+            proxy_pass http://products:3001/health;
+        }
+
+        location = /api/v1/products {
+            proxy_pass http://products:3001/health;
+        }
+
+        location /api/v1/carts {
+            proxy_pass http://carts:3002/health;
         }
 
     }
