--- a/products/package.json
+++ b/products/package.json
@@ -14,8 +14,8 @@
     "dotenv": "^16.0.1"
   },
   "dependencies": {
+    "@azure/service-bus": "^7.6.0",
     "express": "^4.18.1",
-    "kafkajs": "^2.1.0",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3",
     "uuid": "^8.3.2",
