--- a/products/package.json
+++ b/products/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@azure/service-bus": "^7.6.0",
     "express": "^4.18.1",
+    "express-request-id": "^2.0.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.21.3",
     "uuid": "^8.3.2",
