--- a/products/package.json
+++ b/products/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@azure/service-bus": "^7.6.0",
+    "@elastic/elasticsearch": "^8.2.1",
     "express": "^4.18.1",
     "express-request-id": "^2.0.1",
     "mysql2": "^2.3.3",
