--- a/products/package.json
+++ b/products/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.1",
     "express-request-id": "^2.0.1",
     "mysql2": "^2.3.3",
+    "prom-client": "^14.0.1",
     "sequelize": "^6.21.3",
     "uuid": "^8.3.2",
     "winston": "^3.8.1"
