--- a/products/package.json
+++ b/products/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@azure/service-bus": "^7.6.0",
+    "@elastic/ecs-winston-format": "^1.3.1",
     "@elastic/elasticsearch": "^8.2.1",
     "express": "^4.18.1",
     "express-request-id": "^2.0.1",
@@ -22,6 +23,8 @@
     "prom-client": "^14.0.1",
     "sequelize": "^6.21.3",
     "uuid": "^8.3.2",
-    "winston": "^3.8.1"
+    "winston": "^3.8.1",
+    "winston-logstash-transport": "^2.0.0",
+    "winston3-logstash-transport": "^1.2.3"
   }
 }
