--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,9 +5,10 @@ global:
 
 scrape_configs:
   - job_name: products
+    metrics_path: /products/metrics
     static_configs:
       - targets:
-          - "http://products:3001/products/metrics"
+          - "http://products:3001"
         labels:
           project: hadiya
           app: products
