--- a/prometheus.yml
+++ b/prometheus.yml
@@ -5,10 +5,10 @@ global:
 
 scrape_configs:
   - job_name: products
-    metrics_path: /metrics
+    metrics_path: /products/metrics
     static_configs:
       - targets:
-          - "products:3001/products"
+          - "products:3001"
         labels:
           project: hadiya
           app: products
